Add prepare_ magic methods, fix composer format and edit example

--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "description": "Wrapper for Ahrefs API V2",
   "authors": [
     {
-      "name": "ahrefs",
+      "name": "ahrefs"
     }
   ],
   "require": {
